kubernetes/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
    - port: 8443  # Expose the HTTPS port
      targetPort: 8443
  selector:
    app: keycloak
  type: ClusterIP
